feat: implements order and order items handles
- Implements order handler
- Implements order item handler
- Regenerates swagger docs for new handlers
